Don't free the search results if there are none

https://bugs.freedesktop.org/show_bug.cgi?id=32140